--- a/www/css/lib/ratchet.css
+++ b/www/css/lib/ratchet.css
@@ -1260,8 +1260,8 @@ select {
   font-style: normal;
   font-weight: normal;
 
-  src: url("../fonts/ratchicons.eot");
-  src: url("../fonts/ratchicons.eot?#iefix") format("embedded-opentype"), url("../fonts/ratchicons.woff") format("woff"), url("../fonts/ratchicons.ttf") format("truetype"), url("../fonts/ratchicons.svg#svgFontName") format("svg");
+  src: url("../css/fonts/ratchicons.eot");
+  src: url("../css/fonts/ratchicons.eot?#iefix") format("embedded-opentype"), url("../css/fonts/ratchicons.woff") format("woff"), url("../css/fonts/ratchicons.ttf") format("truetype"), url("../css/fonts/ratchicons.svg#svgFontName") format("svg");
 }
 .icon {
   display: inline-block;
