add hidden CSS for show/hide

--- a/www/sass/_palette.sass
+++ b/www/sass/_palette.sass
@@ -1,3 +1,6 @@
 +font-face("Open Sans", font-files("opensans-regular.woff", "opensans-regular.ttf"), "opensans-regular.eot", 400)
 
 +font-face("Open Sans Bold", font-files("opensans-bold.woff", "opensans-bold.ttf"), "opensans-bold.eot", 400)
+
+.hidden
+  display: none
