--- a/www/sass/_body.sass
+++ b/www/sass/_body.sass
@@ -2,4 +2,7 @@ body
   font-family: "Open Sans"
 
 header ul
-  display: none
+  margin-top: 0
+  li
+    display: inline-block
+    padding-left: 10px
