Fix hamburger nav interaction

--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -38,6 +38,10 @@
           background-color: #161616;
         }
       }
+      &.active > a {
+        background-color: #161616;
+        cursor: default;
+      }
     }
   }
 
