Complete header styles

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -18,4 +18,10 @@
     width: 40px;
   }
 
+  &.sync {
+    background-image: url("../img/app/header-sync.png");
+    height: 55px;
+    width: 55px;
+  }
+
 }
