--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -1,3 +1,5 @@
+$app-header-height: 3rem !default;
+$app-header-font-size: 1.4rem;
 $app-header-menu-header-height: 3rem !default;
 $app-header-menu-header-font-size: 1.3rem !default;
 $app-header-menu-font-size: 1rem !default;
