--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -1,48 +1,33 @@
-#app-menu {
+body > header > div  {
 
-  color: #fff;
+  background-color: #eee;
+  height: $app-header-height;
+  padding: 0 (($app-header-height - $app-header-font-size) / 2);
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 1em;
 
-  > header {
-    background-color: #262626;
-    overflow: auto;
-    .close {
-      background-color: #484848;
-      float: left;
-      margin-right: ($app-header-menu-height - $app-header-menu-font-size)/2;
-      height: $app-header-menu-header-height;
-      width: $app-header-menu-header-height;
-      background-size: $app-header-menu-header-font-size $app-header-menu-header-font-size;
-    }
-    h1 {
-      font-size: $app-header-menu-header-font-size;
-      line-height: $app-header-menu-header-height;
-      margin: 0;
-      font-weight: bold;
+  > * {
+    float: left;
+  }
+
+  button.icon {
+    &.hamburger, &.sync {
+      height: $app-header-height;
+      background-position: center;
+      background-size: $app-header-font-size;
+      background-repeat: no-repeat;
     }
   }
 
-  > .list-container > ul {
-    list-style: none;
+  > h1 {
+    font-size: 0.9*$app-header-font-size;
     margin: 0;
-    padding: 0;
-    > li {
-      display: block;
-      > a {
-        font-size: $app-header-menu-font-size;
-        text-transform: uppercase;
-        display: block;
-        padding: ($app-header-menu-height - $app-header-menu-font-size)/2;
-        border-bottom: 1px solid #484848;
-        color: #fff;
-        &:hover {
-          background-color: #161616;
-        }
-      }
-      &.active > a {
-        background-color: #161616;
-        cursor: default;
-      }
-    }
+    line-height: 1;
+    padding: (($app-header-height - 1.1*$app-header-font-size) / 2) (($app-header-height - $app-header-font-size) / 2) 0;
   }
 
+}
+
+#button-region {
+  float: right;
 }
