Complete styling for survey list

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -23,6 +23,12 @@
     width: 55px;
   }
 
+  &.clock {
+    background-image: url("../img/icon/clock.png");
+    height: 31px;
+    width: 31px;
+  }
+
   &.info {
     background-image: url("../img/icon/info.png");
   }
