Firefox and IE progress bar

--- a/www/blocks/page/survey-step.scss
+++ b/www/blocks/page/survey-step.scss
@@ -7,6 +7,7 @@
   progress {
 
     -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
 
     width: 100%;
@@ -15,7 +16,6 @@
     line-height: 1em;
     border: 0;
 
-    // container (in WebKit)
     &::-webkit-progress-bar {
       background-color: #eee;
     }
@@ -27,6 +27,17 @@
       -webkit-linear-gradient(left, #09c, #07a);
       background-size: 2rem 1rem, 100% 100%, 100% 100%;
     }
+
+    progress[value]::-moz-progress-bar {
+      background-image:
+      -moz-linear-gradient(135deg, transparent 33%, rgba(0, 0, 0, 0.1) 33%, rgba(0, 0, 0, 0.1) 66%, transparent 66%),
+      -moz-linear-gradient(top, rgba(255, 255, 255, 0.25), rgba(0, 0, 0, 0.25) ),
+      -moz-linear-gradient(left, #09c, #07a);
+      background-size: 2rem 1rem, 100% 100%, 100% 100%;
+    }
+
+    /* For IE10 */
+    color: blue;
 
   }
 
