--- a/www/blocks/global/_progress.scss
+++ b/www/blocks/global/_progress.scss
@@ -6,13 +6,14 @@ progress {
   -moz-appearance: none;
   appearance: none;
 
+  background-color: #fff;
   border-radius: 0;
   font-size: 1rem;
   line-height: 1em;
   border: 0;
 
   &::-webkit-progress-bar {
-    background-color: #eee;
+    background-color: #fff;
   }
 
   &::-webkit-progress-value {
