--- a/www/blocks/page/_campaigns.scss
+++ b/www/blocks/page/_campaigns.scss
@@ -2,7 +2,7 @@
 
   > header {
     @include -clearfix;
-    margin: 1em;
+    margin: 1rem;
     position: relative;
     height: ((3/2) * $global-form-control-font-size + 2 * $global-form-control-padding); /* same as .icon.search.form-control in components/_icon.scss */
     overflow: hidden;
