--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -28,7 +28,7 @@
       overflow: hidden;
     }
 
-    input[type="checkbox"], input[type="radio"] {
+    input[type="checkbox"], input[type="radio"], button.delete {
       margin: 1rem;
       line-height: 1;
     }
@@ -41,6 +41,16 @@
       left: 3rem;
       padding: 1rem;
       line-height: 1;
+      z-index: 10;
+    }
+
+    button.delete {
+      position: absolute;
+      right: 0;
+      z-index: 11;
+      background-size: 1rem;
+      height: 1rem;
+      width: 1rem;
     }
 
   }
