--- a/www/blocks/page/_surveys.scss
+++ b/www/blocks/page/_surveys.scss
@@ -11,6 +11,7 @@
   }
 
   .survey [role="link"] {
+    padding: 0.5rem 0 0 0.5rem;
     position: relative;
     .reminder {
       position: absolute;
