--- a/www/blocks/config/_global.scss
+++ b/www/blocks/config/_global.scss
@@ -1,5 +1,6 @@
 $global-form-control-background-color: #f9f9f9 !default;
-$global-form-control-border-color: #ccc !default;
+$global-form-control-border-color: #aaa !default;
+$global-form-control-border-color-dark: darken($global-form-control-border-color, 30%) !default;
 $global-form-control-text-color: #555 !default;
 $global-form-control-font-size: 1rem !default;
 $global-form-control-padding: 0.5rem !default;
