--- a/www/blocks/global/_form-controls.scss
+++ b/www/blocks/global/_form-controls.scss
@@ -2,6 +2,7 @@ button,
 input[type="button"],
 input[type="date"],
 input[type="email"],
+input[type="number"],
 input[type="reset"],
 input[type="search"],
 input[type="submit"],
