--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -186,6 +186,12 @@
     input + button {
       border-top: 0;
     }
+    input[type="number"]{
+      &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
+        appearance: none;
+        -webkit-appearance: none;
+      }
+    }
   }
 
 }
