--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -194,4 +194,44 @@
     }
   }
 
+  .photo-control {
+    .container {
+      position: relative;
+      min-height: 200px;
+    }
+    input[type="file"] {
+      top: 50%;
+      position: absolute;
+      height: 3rem;
+      width: 100%;
+      color: transparent;
+      &::-webkit-file-upload-button {
+        visibility: hidden;
+      }
+      &::before {
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        content: '[TAKE PICTURE ICON HERE]';
+        text-align: center;
+        color: #fff;
+        font-weight: bold;
+        background-color: rgba(55,55,55,0.9);
+        border: solid rgba(255,255,255,0.8);
+        border-width: 2px 0;
+        padding: 1rem;
+        font-size: 1rem;
+        line-height: 1;
+        outline: none;
+        white-space: nowrap;
+        -webkit-user-select: none;
+        cursor: pointer;
+      }
+    }
+    .preview-image {
+      width: 100%;
+    }
+  }
+
 }
