Add .icon.upload and use icon buttons in upload queue

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -23,6 +23,12 @@
     width: 55px;
   }
 
+  &.upload {
+    background-image: url("../img/icon/sync.png");
+    height: 55px;
+    width: 55px;
+  }
+
   &.clock {
     background-image: url("../img/icon/clock.png");
     height: 31px;
