--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -10,7 +10,7 @@ body > header > div  {
   }
 
   button.icon {
-    &.hamburger, &.sync {
+    &.hamburger, &.sync, &.upload {
       height: $app-header-height;
       background-position: center;
       background-size: $app-header-font-size;
