--- a/www/blocks/page/_upload-queue.scss
+++ b/www/blocks/page/_upload-queue.scss
@@ -10,6 +10,33 @@
         font-style: italic;
         color: #777;
       }
+      .item {
+        position: relative;
+        [role="link"] {
+          width: auto;
+          margin-right: 6rem;
+          > * {
+            margin: 0;
+          }
+        }
+        button {
+          position: absolute;
+          top: 0;
+          right: 0;
+          width: 2rem;
+          height: 2rem;
+          background-size: 2rem;
+        }
+        button + button {
+          right: 3rem;
+        }
+        button + [role="link"] {
+          margin-right: 3rem;
+        }
+        button + button + [role="link"] {
+          margin-right: 6rem;
+        }
+      }
     }
   }
 }
