Add login styling

--- a/www/blocks/global/_form-controls.scss
+++ b/www/blocks/global/_form-controls.scss
@@ -3,6 +3,7 @@ input[type="button"],
 input[type="date"],
 input[type="email"],
 input[type="number"],
+input[type="password"],
 input[type="reset"],
 input[type="search"],
 input[type="submit"],
