Add -list-border-color configuration option

--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -4,3 +4,6 @@ $app-header-menu-header-height: 3rem !default;
 $app-header-menu-header-font-size: 1.3rem !default;
 $app-header-menu-font-size: 1rem !default;
 $app-header-menu-height: 3rem !default;
+$app-header-border-color: #aaa !default;
+
+$app-list-border-color: #ccc !default;
