--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -3,7 +3,7 @@ body > header > div  {
   background-color: #eee;
   height: $app-header-height;
   padding: 0 (($app-header-height - $app-header-font-size) / 2);
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid $app-header-border-color;
 
   > * {
     float: left;
