--- a/www/blocks/component/_nav_list.scss
+++ b/www/blocks/component/_nav_list.scss
@@ -7,10 +7,10 @@ nav.list {
 
     > li {
 
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid $app-list-border-color;
 
       &:first-child {
-        border-top: 1px solid #ccc;
+        border-top: 1px solid $app-list-border-color;
       }
 
     }
