--- a/www/blocks/page/_upload-queue.scss
+++ b/www/blocks/page/_upload-queue.scss
@@ -5,7 +5,7 @@
     padding: 0;
     > li {
       padding: 1rem;
-      border-bottom: 1px solid #ccc;
+      border-bottom: 1px solid $app-list-border-color;
       &.empty {
         font-style: italic;
         color: #777;
