Tweak input styling

--- a/www/blocks/config/_global.scss
+++ b/www/blocks/config/_global.scss
@@ -1,6 +1,7 @@
-$global-form-control-background-color: #f9f9f9 !default;
+$global-form-control-background-color: #fff !default;
 $global-form-control-border-color: #aaa !default;
 $global-form-control-border-color-dark: darken($global-form-control-border-color, 30%) !default;
 $global-form-control-text-color: #555 !default;
 $global-form-control-font-size: 1rem !default;
 $global-form-control-padding: 0.5rem !default;
+$global-form-control-box-shadow: inset 0 2px 2px rgba(0,0,0,.075) !default;
