--- a/www/blocks/global/_form-controls.scss
+++ b/www/blocks/global/_form-controls.scss
@@ -17,7 +17,25 @@ textarea {
   padding: $global-form-control-padding;
   background-color: $global-form-control-background-color;
   border: 1px solid $global-form-control-border-color;
+  border-radius: 4px;
   color: $global-form-control-text-color;
   line-height: 1;
+
+}
+
+input[type="date"],
+input[type="email"],
+input[type="number"],
+input[type="password"],
+input[type="reset"],
+input[type="search"],
+input[type="submit"],
+input[type="tel"],
+input[type="text"],
+input[type="time"],
+input[type="url"],
+textarea {
+
+  box-shadow: $global-form-control-box-shadow;
 
 }
