Tweak background color behaviors

--- a/www/blocks/config/_component.scss
+++ b/www/blocks/config/_component.scss
@@ -1,2 +1,4 @@
 $component-slide-out-width: 300px !default;
 $component-slide-out-width-fallback: 40% !default;
+$component-header-background-color: #fff !default; // different from a page header
+$component-background-color: #fff !default;
