--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -198,6 +198,7 @@
     .container {
       position: relative;
       min-height: 200px;
+      background-color: $component-background-color;
     }
     input[type="file"] {
       top: 50%;
