--- a/www/blocks/config/_global.scss
+++ b/www/blocks/config/_global.scss
@@ -5,3 +5,4 @@ $global-form-control-text-color: #555 !default;
 $global-form-control-font-size: 1rem !default;
 $global-form-control-padding: 0.5rem !default;
 $global-form-control-box-shadow: inset 0 2px 2px rgba(0,0,0,.075) !default;
+$global-background-color: #f7f7f7 !default;
