--- a/www/blocks/config/_app.scss
+++ b/www/blocks/config/_app.scss
@@ -6,4 +6,10 @@ $app-header-menu-font-size: 1rem !default;
 $app-header-menu-height: 3rem !default;
 $app-header-border-color: #aaa !default;
 
-$app-list-border-color: #ccc !default;
+$app-list-border-color: #ddd !default;
+$app-list-box-shadow: inset 0 2px 2px rgba(0,0,0,.05) !default;
+$app-list-hover-background-color: #f6f6f6 !default;
+
+$app-background-color: #eee !default;
+
+$app-main-background-color: #fff !default;
