--- a/www/blocks/config/_page.scss
+++ b/www/blocks/config/_page.scss
@@ -1,2 +1,5 @@
 $info-region-header-height: 2.6rem !default;
-$info-region-header-font-size: 1rem;
+$info-region-header-font-size: 1rem !default;
+
+$survey-step-inset-block-background-color: #555 !default;
+$survey-step-inset-block-font-color: #fff !default;
