--- a/www/blocks/page/_surveys.scss
+++ b/www/blocks/page/_surveys.scss
@@ -12,17 +12,18 @@
   }
 
   .survey [role="link"] {
-    padding: 0.5rem 0 0 0.5rem;
+    padding: 1.5rem 0 1.5rem 1.5rem;
     position: relative;
     .reminder {
       background-color: #fff;
       position: absolute;
-      font-size: 0.8rem;
       font-weight: bold;
       color: #777;
       top: 0;
       right: 0;
-      padding-top: 0.6rem;
+      margin-top: 1.5rem;
+      padding-top: 0.1rem;
+      font-size: 0.8rem;
       &::before {
         float: left;
         margin-right: 0.5rem;
