--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -1,8 +1,7 @@
 body > header > div  {
 
-  background-color: #eee;
+  background: $app-header-background;
   height: $app-header-height;
-  padding: 0 (($app-header-height - $app-header-font-size) / 2);
   border-bottom: 1px solid $app-header-border-color;
 
   > * {
@@ -11,15 +10,17 @@ body > header > div  {
 
   button.icon {
     &.hamburger, &.sync, &.upload {
+      margin-left: 1rem;
       height: $app-header-height;
       background-position: center;
-      background-size: $app-header-font-size;
+      background-size: $app-header-image-size;
       background-repeat: no-repeat;
     }
   }
 
   > h1 {
     font-size: $app-header-font-size;
+    color: $app-header-font-color;
     margin: 0;
     line-height: 1;
     padding: (($app-header-height - $app-header-font-size) / 2) (($app-header-height - $app-header-font-size) / 2) 0;
