--- a/www/blocks/page/_upload-queue.scss
+++ b/www/blocks/page/_upload-queue.scss
@@ -4,7 +4,7 @@
     margin: 0;
     padding: 0;
     > li {
-      padding: 1rem;
+      padding: $app-main-footer-padding;
       border-bottom: 1px solid $app-list-border-color;
       &.empty {
         font-style: italic;
