Style .add-form for custom choices

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -87,6 +87,10 @@
     height: 3rem;
   }
 
+  .add-form {
+    padding: 1rem
+  }
+
   #prev-button, #next-button, #skip-button {
     float: left;
     width: 33%;
