Fix margin/padding bug on form.login

--- a/www/blocks/page/_login.scss
+++ b/www/blocks/page/_login.scss
@@ -1,5 +1,6 @@
 form.login {
-  margin: $app-main-footer-padding;
+  margin: 0;
+  padding: $app-main-footer-padding;
   > :first-child {
     margin-top: 0;
   }
