--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -26,6 +26,10 @@ body > header > div  {
     padding: (($app-header-height - $app-header-font-size) / 2) (($app-header-height - $app-header-font-size) / 2) 0;
   }
 
+  &.ios7 {
+    margin-top: $app-status-bar-offset;
+  }
+
 }
 
 #button-region {
