add new top values for the menu and the overlay in ios7

--- a/www/blocks/app/_menu.scss
+++ b/www/blocks/app/_menu.scss
@@ -49,3 +49,11 @@
   }
 
 }
+
+.ios7 #app-menu {
+  top: $app-status-bar-offset;
+}
+
+.ios7 #app-menu .overlay {
+  top: $app-status-bar-offset;
+}
