add disabled css selector for survey step buttons with `visibility: hidden`

--- a/www/blocks/page/_survey-step.scss
+++ b/www/blocks/page/_survey-step.scss
@@ -146,6 +146,12 @@
     }
   }
 
+  #prev-button, #skip-button, #next-button {
+    .disabled {
+      visibility: hidden;
+    }
+  }
+
   .datetime-control {
     @extend .control-container;
     label {
