add new config for global form control active background color

--- a/www/blocks/config/_global.scss
+++ b/www/blocks/config/_global.scss
@@ -1,4 +1,5 @@
 $global-form-control-background-color: #fff !default;
+$global-form-control-active-background-color: #eeeeee !default;
 $global-form-control-border-color: #ccc !default;
 $global-form-control-border-color-dark: darken($global-form-control-border-color, 30%) !default;
 $global-form-control-text-color: #555 !default;
