change background for form buttons that are active according to CSS `:active` selector

--- a/www/blocks/global/_form-controls.scss
+++ b/www/blocks/global/_form-controls.scss
@@ -21,6 +21,9 @@ textarea {
   color: $global-form-control-text-color;
   line-height: 1;
 
+  &:active {
+    background-color: $global-form-control-active-background-color;
+  }
 }
 
 input[type="date"],
