--- a/www/blocks/config/_component.scss
+++ b/www/blocks/config/_component.scss
@@ -2,3 +2,6 @@ $component-slide-out-width: 300px !default;
 $component-slide-out-width-fallback: 40% !default;
 $component-header-background-color: #fff !default; // different from a page header
 $component-background-color: #fff !default;
+
+$component-loader-width: 150px;
+$component-loader-height: 200px;
