add config settings for blocker component UI in blocks CSS

--- a/www/blocks/config/_component.scss
+++ b/www/blocks/config/_component.scss
@@ -5,3 +5,6 @@ $component-background-color: #fff !default;
 
 $component-loader-width: 150px;
 $component-loader-height: 200px;
+
+$component-blocker-width: 300px;
+$component-blocker-height: 400px;
