add image background for custom icon - needs to be replaced later

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -24,6 +24,14 @@
   }
 
   &.upload {
+    // needs to be replaced with custom upload icon
+    background-image: url("../img/icon/sync.png");
+    height: 55px;
+    width: 55px;
+  }
+
+  &.add {
+    // needs to be replaced with custom add icon
     background-image: url("../img/icon/sync.png");
     height: 55px;
     width: 55px;
