point to the new icons in the css

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -25,14 +25,14 @@
 
   &.upload {
     // needs to be replaced with custom upload icon
-    background-image: url("../img/icon/sync.png");
+    background-image: url("../img/icon/upload-queue.png");
     height: 55px;
     width: 55px;
   }
 
   &.add {
     // needs to be replaced with custom add icon
-    background-image: url("../img/icon/sync.png");
+    background-image: url("../img/icon/add.gif");
     height: 55px;
     width: 55px;
   }
