add list icon size css attribute

--- a/www/blocks/config/_page.scss
+++ b/www/blocks/config/_page.scss
@@ -3,3 +3,5 @@ $info-region-header-font-size: 1rem !default;
 
 $survey-step-inset-block-background-color: #555 !default;
 $survey-step-inset-block-font-color: #fff !default;
+
+$list-icon-size: 2rem !default;
