--- a/www/blocks/page/_upload-queue.scss
+++ b/www/blocks/page/_upload-queue.scss
@@ -1,4 +1,18 @@
 #upload-queue {
+  div.icon-box {
+    float: right;
+    width: 5rem;
+
+    button.icon {
+      background-position: center;
+      background-size: $list-icon-size;
+      background-repeat: no-repeat;
+      width: 2rem;
+    }
+
+  }
+
+
   #list-region > ul {
     list-style: none;
     margin: 0;
