add new upload-queue selector for upload queue icon

--- a/www/blocks/component/_icon.scss
+++ b/www/blocks/component/_icon.scss
@@ -23,8 +23,7 @@
     width: 55px;
   }
 
-  &.upload {
-    // needs to be replaced with custom upload icon
+  &.upload-queue {
     background-image: url("../img/icon/upload-queue.png");
     height: 55px;
     width: 55px;
