--- a/www/blocks/app/_header.scss
+++ b/www/blocks/app/_header.scss
@@ -9,7 +9,7 @@ body > header > div  {
   }
 
   button.icon {
-    &.hamburger, &.sync, &.upload, &.add {
+    &.hamburger, &.sync, &.upload-queue, &.add {
       margin-left: 1rem;
       height: $app-header-height;
       background-position: center;
